[fix] header z-index, wrap, discounts, card position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ body {
 header {
 	width: 100%;
 	position: fixed;
+	z-index: 1;
 }
 
 .header-container {
@@ -95,16 +96,20 @@ main {
 .row {
 	display: flex;
 	flex-wrap: wrap;
+	gap: 20px;
 }
 
 .col-33 {
-	width: calc(100% / 3);
+	width: calc(100% / 3 - 20px);
 }
 
 /* cards */
 
-.card img{
+.card{
 	position: relative;
+}
+
+.card img {
 	width: 100%;
 }
 
